InventoryManagement/force-app/src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Lead_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Technician</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Visit_Required__c</fullName>
        <label>Return Visit Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduling_Status__c</fullName>
        <label>Scheduling Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>